python-debtcollector (1.5.0-1) experimental; urgency=medium

  [ Ondřej Nový ]
  * Standards-Version is 3.9.8 now (no change)
  * Fix copyright year in documentation to make build reproducible
  * Added simple Debian tests
  * d/copyright: Added myself to Debian part
  * Changed UPSTREAM_GIT to github.com

  [ Thomas Goirand ]
  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Wed, 13 Jul 2016 16:51:55 +0200

python-debtcollector (1.3.0-2) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Mon, 04 Apr 2016 08:27:32 +0000

python-debtcollector (1.3.0-1) experimental; urgency=medium

  [ Corey Bryant ]
  * d/control: Drop python(3)-doc8 from build-depends as it's not needed
    for package builds.

  [ Ondřej Nový ]
  * Fixed VCS URLs (https).

  [ Thomas Goirand ]
  * New upstream release.
  * Standards-Version: 3.9.7 (no change).

 -- Thomas Goirand <zigo@debian.org>  Mon, 04 Apr 2016 09:23:20 +0200

python-debtcollector (1.2.0-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Fixed debian/copyright ordering and years.

 -- Thomas Goirand <zigo@debian.org>  Sat, 16 Jan 2016 03:24:09 +0000

python-debtcollector (1.0.0-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Added support for DEB_BUILD_OPTIONS=nodocs.

 -- Thomas Goirand <zigo@debian.org>  Fri, 27 Nov 2015 12:09:11 +0100

python-debtcollector (0.8.0-2) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Fri, 16 Oct 2015 09:28:56 +0000

python-debtcollector (0.8.0-1) experimental; urgency=medium

  * New upstream release (Closes: #797927).
  * Fixed (build-)depends for this release.
  * Fixed watch file.

 -- Thomas Goirand <zigo@debian.org>  Sat, 12 Sep 2015 09:48:44 +0200

python-debtcollector (0.5.0-1) experimental; urgency=medium

  * Team upload.